--- a/UnivercityDB/UnivercityDB/Components/_Imports.razor
+++ b/UnivercityDB/UnivercityDB/Components/_Imports.razor
@@ -11,3 +11,8 @@
 @using UnivercityDB.Components
 @using Radzen
 @using Radzen.Blazor
+@using UnivercityDB.Entities
+@using UnivercityDB.Services.FacultyService
+@using UnivercityDB.Services.GroupService
+@using UnivercityDB.Services.StudentService
+
