--- a/UnivercityDB/UnivercityDB/Components/_Imports.razor
+++ b/UnivercityDB/UnivercityDB/Components/_Imports.razor
@@ -15,4 +15,5 @@
 @using UnivercityDB.Services.FacultyService
 @using UnivercityDB.Services.GroupService
 @using UnivercityDB.Services.StudentService
+@using Pages.Shared
 
