--- a/UnivercityDB/UnivercityDB/Components/Layout/MainLayout.razor
+++ b/UnivercityDB/UnivercityDB/Components/Layout/MainLayout.razor
@@ -1,5 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
+<RadzenDialog/>
 <RadzenLayout style="position: relative">
     <RadzenHeader>
         <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" Gap="0">
