--- a/UnivercityDB/UnivercityDB/Components/Pages/Faculties/FacultyDetailsPage.razor
+++ b/UnivercityDB/UnivercityDB/Components/Pages/Faculties/FacultyDetailsPage.razor
@@ -1,4 +1,6 @@
-﻿@inject IFacultyService FacultyService
+﻿@rendermode @(new InteractiveServerRenderMode(prerender: true))
+@attribute [StreamRendering(true)]
+@inject IFacultyService FacultyService
 @inject DialogService DialogService
 
 @if (id == null)
@@ -17,6 +19,19 @@ else
                 <RadzenRequiredValidator Component="Title" Text="Title is requred" Popup=@true Style="position: absolute"/>
             </RadzenFormField>
         </RadzenStack>
+@*         <RadzenCard>
+            <RadzenText Text="Chairs" TextStyle="TextStyle.H6"/>
+            <RadzenStack Orientation="Orientation.Vertical" Gap="3" AlignItems="AlignItems.Start">
+                @for(int i = 0; i < _chairs.Count; i++)
+                {
+                    <RadzenFormField Text="Title">
+                        <RadzenTextBox Name="Title" @bind-Value="@_chairs[i]" />                       
+                    </RadzenFormField>
+                    <RadzenButton Text="Remove chair" ButtonType="ButtonType.Button" ButtonStyle="ButtonStyle.Light" Click="() => RemoveChair(i)" />
+                }
+                <RadzenButton Text="Add chair" ButtonType="ButtonType.Button" ButtonStyle="ButtonStyle.Light" Click="() => AddChair()"/>
+            </RadzenStack>
+        </RadzenCard> *@
         <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" Gap="3">
             <RadzenFormField Text="Note">
                 <RadzenTextArea Name="Note" @bind-Value="@faculty.Note" />
@@ -35,11 +50,32 @@ else
     [SupplyParameterFromForm]
     Faculty faculty { get; set; } = new Faculty();
 
+    // private List<string>? _chairs { get; set; } = null;
+
     private string _btnText = String.Empty;
+
+    // private void AddChair()
+    // {
+    //     if (_chairs is null) 
+    //     {
+    //         _chairs = new List<string>();
+    //     }
+
+    //     _chairs.Add(string.Empty);
+    // }
+
+    // private void RemoveChair(int index)
+    // {
+    //     if (_chairs != null && index >= 0 && index < _chairs.Count)
+    //     {
+    //         _chairs.RemoveAt(index);
+    //     }
+    // }
 
     protected override void OnInitialized()
     {
         _btnText = id == null ? "Create" : "Edit";
+
     }
 
     protected override async Task OnParametersSetAsync()
@@ -49,7 +85,9 @@ else
             var result = await FacultyService.GetFaculty((int)id);
 
             if (result is not null)
+            {
                 faculty = result;
+            }
         }
     }
 
